# lugaru

./: .gitignore  CMakeLists.txt  COMPILING.md
CMake/Modules/: FindSDL2.cmake
Source/: Game.cpp  Game.hpp  GameDraw.cpp  Globals.cpp  main.cpp
Source/Menu/: Menu.cpp
Source/Utils/: Folders.cpp  ImageIO.cpp  Input.hpp  String.cpp  String.hpp
